  EntityDbRemoteServer.getEntityDefinitions() added
  EntityDbServerAdmin.getEntityDefinitions() added
  ServerMonitor.domainListModel field and getEntityDefinitions() method added
  ServerMonitorPanel added a new environment tab showing a list of entities defined in the server
  dist ant task added framework.domain classes to server_monitor.jar
  EmpDeptProfiling insertEmployee scenario fixed
  EntityTableModel summary models no longer update on evtSelectionChangedAdjusting, performance killer
  common.model.RandomItemModel, BoundedRandomItemModel and tests and and common.ui.RandomItemPanel added
  ProfilingModel.scenarioShareModel field added
  ProfilingModel.performWork() no longer abstract
  ProfilingPanel refactored and added SharePanel for usage scenario weight configuration
  build.xml joined delete_*_db and create_*_db into recreate_*_db and commented out tasks and properties related to Derby Db
  ServerMonitorPanel added a button to reset the statistics and a server shutdown confirmation dialog
  UsageScenario.getDefaultWeight() added
  EntityRepository.putAll() removed, unused
  EntityDb.getProperties() removed
  EntityDbProvider.getDescription() added
  RandomItemPanel UI changed, decrease button moved to the east side
  RandomItemModel.getWeightRatio() added and tested
  BoundedRandomItemModel no longer truncates the total weight to module # of items
  RandomItemPanel refactored
  ProfilingModel now updates scenario chart while inactive
  ProfilingModel.getThinkTime(), think() and delayLogin() added
  EmpDeptProfiling added loginLogout usage scenario
  common.model.LoadTestModel refactored from ProfilingModel
  ProfilingPanel renamed to LoadTestPanel and moved to common.ui
  LoadTestModel.relentless and working fields removed
  LoadTestPanel showFrame() no longer called in constructor