@@ -1,4 +1,0 @@
-/**
- * The profiling application model layer.
- */
-package org.jminor.framework.tools.profiling;
